--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lukas</title>
     <link rel="stylesheet" href="style.css">
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/barba.js/0.0.2/barba.js" integrity="sha512-B0OySVvRAfari2sUuR2p6F9IgLANmnAWyXoJAQzqkUpOJDkT2RwcVUtlPaxd2691ZtfaNsPHTRvEgDD82tEdBQ==" crossorigin="anonymous"></script>
-    <script src="https://unpkg.com/gsap@latest/dist/gsap.min.js"></script> -->
 </head>
 <body>
 <nav >
@@ -17,7 +15,7 @@
         <li><p>CONTACT</p></li>
     </ul>
 </nav>
-    <img src="./fond.jpg" class="img">
+    <img src="./images/fond.jpg" class="img">
     <div class="text">
         <h1 class="titre">Portofolio</h1>
         <p class="text1">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
